--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,13 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>javabilities com</title>
+    <title>Javabilities Home Page</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
+    <meta name="description" content="Javabilities Home Page">
+    <meta name="author" content="Lloyd H. Meinholz">
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -14,6 +17,8 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/sticky-footer-navbar.css">
     <!-- endbuild -->
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -25,44 +30,102 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <h3 class="text-muted">javabilities com</h3>
-      </div>
-
-      <div class="jumbotron">
-        <h1>'Allo, 'Allo!</h1>
-        <p class="lead">Always a pleasure scaffolding your apps.</p>
-        <p><a class="btn btn-lg btn-success" href="#">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>
-      </div>
-
-      <div class="row marketing">
-        <div class="col-lg-6">
-          <h4>HTML5 Boilerplate</h4>
-          <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
-
-
-
-          <h4>Bootstrap</h4>
-          <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
-
-          <h4>Modernizr</h4>
-          <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
-
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Javabilities</a>
         </div>
-      </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
 
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projects <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">pfdemo</a></li>
+                <li><a href="#">gdemo</a></li>
+              </ul>
+            </li>
 
+            <li><a href="https://github.com/javabilities" target="_blank">Github</a></li>
+            <li><a href="http://blog.javabilities.com/" target="_blank">Blog</a></li>
+            <li><a href="#about">About</a></li>
+
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sites by Thomas <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="thomas/centralmiddlepta">CMS PTA Site</a></li>
+                <li><a href="thomas/tessellations">Tesselations Site</a></li>
+                <li><a href="thomas/greek_mythology">Greek Mythology Site</a></li>
+              </ul>
+            </li>
+
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <!-- Begin page content -->
+    <div class="container">
+      <div class="page-header">
+        <h1>Javabilities Home</h1>
+      </div>
+      <p class="lead">This is a site for many of our ideas and experiments. Many of these projects are incomplete and works in progress.
+        The work that is completed is checked into a <a href="http://github.com/javabilities/" target="_blank">github account</a> and is availble to anyone.
+        I have documented some of the more interesting parts of the projects on my <a href="http://blog.javabilities.com/" target="_blank">blog.</a>
+      </p>
     </div>
+
+    <footer class="footer">
+      <div class="container">
+        <p class="pull-right">&copy; Javabilities 2015</p>
+      </div>
+    </footer>
+
+    <!--<div class="container">-->
+      <!--<div class="header">-->
+        <!--<ul class="nav nav-pills pull-right">-->
+          <!--<li class="active"><a href="#">Home</a></li>-->
+          <!--<li><a href="#">About</a></li>-->
+          <!--<li><a href="#">Contact</a></li>-->
+        <!--</ul>-->
+        <!--<h3 class="text-muted">javabilities com</h3>-->
+      <!--</div>-->
+
+      <!--<div class="jumbotron">-->
+        <!--<h1>'Allo, 'Allo!</h1>-->
+        <!--<p class="lead">Always a pleasure scaffolding your apps.</p>-->
+        <!--<p><a class="btn btn-lg btn-success" href="#">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>-->
+      <!--</div>-->
+
+      <!--<div class="row marketing">-->
+        <!--<div class="col-lg-6">-->
+          <!--<h4>HTML5 Boilerplate</h4>-->
+          <!--<p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>-->
+
+
+
+          <!--<h4>Bootstrap</h4>-->
+          <!--<p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>-->
+
+          <!--<h4>Modernizr</h4>-->
+          <!--<p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>-->
+
+        <!--</div>-->
+      <!--</div>-->
+
+      <!--<div class="footer">-->
+        <!--<p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>-->
+      <!--</div>-->
+
+    <!--</div>-->
 
 
     <!-- build:js(.) scripts/vendor.js -->
